# jsbsim-rocket-wsl

./: CMakeLists.txt  README.md  build_jsbsim.sh  rocket_trajectory.csv
env/: pyvenv.cfg
